Securely serve audio in all cases

--- a/casestudies/1/casestudy/www/layout/case_id_1_id_35.html
+++ b/casestudies/1/casestudy/www/layout/case_id_1_id_35.html
@@ -294,7 +294,7 @@ font-style:italic;
 <p><em>Listen to Weisenhaus on Singapore&rsquo;s lack of civil unrest.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 3 sec</span><br />
 <!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Weisenhaus%20on%20civil%20unrest_lev.mp3" class="audiofile" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Weisenhaus%20on%20civil%20unrest_lev.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Weisenhaus%20on%20civil%20unrest_lev.mp3" type="audio/mpeg"></audio>
 </p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
