--- a/casestudies/1/casestudy/www/layout/case_id_1_id_49_pid_45.html
+++ b/casestudies/1/casestudy/www/layout/case_id_1_id_49_pid_45.html
@@ -299,7 +299,7 @@ font-style:italic;
 <p><em>Listen to Plott on how the Western press covers Singapore.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min</span><br />
 <!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Plott%20on%20covering%20Singapore_lev.mp3" class="audiofile" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Plott%20on%20covering%20Singapore_lev.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Plott%20on%20covering%20Singapore_lev.mp3" type="audio/mpeg"></audio>
 </p></div>
 
 
