--- a/casestudies/1/casestudy/www/layout/case_id_1_id_55.html
+++ b/casestudies/1/casestudy/www/layout/case_id_1_id_55.html
@@ -286,7 +286,7 @@ font-style:italic;
 <p><i>Listen to Chan on contesting a media case in Singapore.</i><br />
 <span class="footnoteslength"><strong>Length:</strong> 38 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Ying%20Chan%20on%20contesting%20a%20media%20case_lev.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Ying%20Chan%20on%20contesting%20a%20media%20case_lev.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Ying%20Chan%20on%20contesting%20a%20media%20case_lev.mp3" type="audio/mpeg"></audio>
 </p>
 <p>This seemed a reasonable calculus in this instance for several reasons. First, the Lees apparently wanted to make an example of FEER. A successful suit would remind the foreign media that they were still merely tolerated guests in Singapore. Second, the fact that the Ministry of Information had revoked the exemptions of several publications, and reinterpreted its own law to include the monthly FEER among offshore publications, indicated that the government was prepared to go to considerable lengths to reassert its primacy. As former FEER editor Plott puts it:</p>
 <blockquote>
