--- a/casestudies/15/casestudy/www/layout/case_id_15_id_160.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_160.html
@@ -283,7 +283,7 @@ font-style:italic;
 <p><em>Listen to Smith discuss the competitors and </em>Times Union<em>'s market presence.</em></p>
 <p>
 <!--img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_competitors.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_competitors.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_competitors.mp3" type="audio/mpeg"></audio>
 
 </p>
 <p><span class="inline right"><img width="230" height="155" border="0" alt="" class="image preview" src="../../files/timesunion/images/albanypic.preview.jpg" /></span>The city it served was a major government and education center. Albany was often called the &ldquo;most average city in America&rdquo; because its 98,000 residents more closely mirrored national demographic averages than any other city. This made Albany, 136 miles north of New York City, a popular test market for new business and retail products.</p>
