--- a/casestudies/15/casestudy/www/layout/case_id_15_id_163.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_163.html
@@ -286,7 +286,7 @@ font-style:italic;
 <p>
 	<em>Listen to Smith discuss the organic growth of </em><em>Times Union.</em><br />
 	<!--img alt="" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_grew_organically.mp3" /-->
-    <audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_grew_organically.mp3" type="audio/mpeg"></audio>
+    <audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_grew_organically.mp3" type="audio/mpeg"></audio>
     
     </p>
     
