--- a/casestudies/15/casestudy/www/layout/case_id_15_id_165.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_165.html
@@ -288,7 +288,7 @@ font-style:italic;
 <p>
 	<em>Listen to Smith&rsquo;s explanation of lost opportunities.</em><br />
 	<!-- img alt="" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_lost_opportunities.mp3" /-->
-    <audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_lost_opportunities.mp3" type="audio/mpeg"></audio>
+    <audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_lost_opportunities.mp3" type="audio/mpeg"></audio>
 </p>
 <p>
 	Inefficiencies extended to other parts of the newsroom. Smith recalls arriving early to the building and passing a printed photo assignment taped to the studio door for the first photographer to find. &ldquo;It was just amazing that in the 21st century we were still depending upon a piece of paper taped to a door to communicate with someone,&rdquo; Smith says. &ldquo;What happens if the first photographer in the morning did have another assignment and never got to that note?&rdquo;</p>
