--- a/casestudies/17/casestudy/www/layout/case_id_17_id_199.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_199.html
@@ -264,7 +264,7 @@ font-style:italic;
 <p><em>Listen to Jenner&rsquo;s reaction to the surprising rise in online readership.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 50 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Jenner_on_growth.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Jenner_on_growth.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Jenner_on_growth.mp3" type="audio/mpeg"></audio>
 </p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
