--- a/casestudies/17/casestudy/www/layout/case_id_17_id_204.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_204.html
@@ -264,7 +264,7 @@ font-style:italic;
 <p><em>Listen to Logan&rsquo;s expectations for her blog.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 43 sec</span><br />
 <!-- img width="28" height="30" border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Logan_thought_process.mp3" class="audiofile" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Logan_thought_process.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Logan_thought_process.mp3" type="audio/mpeg"></audio>
 </p>
 <p>When she did, what she saw dismayed her. Her blog entries contained a number of typos and grammatical errors. For example, in a <a class="pdflink" target="_blank" href="../../files/bakersfield/post3_20_10_26.pdf">posting made March 20 at 10:26 a.m.</a>, Logan had written: &ldquo;Laskowski observed the kitchen has not been cleaned with the breakfast items were still in the kitchen and possible a light lunch was prepared.&rdquo; It was the first time she realized her postings had not been edited. Poor grammar was one thing, but what about mistakes? As she emailed Swenson on March 21:</p>
 <blockquote>
