--- a/casestudies/17/casestudy/www/layout/case_id_17_id_205.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_205.html
@@ -260,7 +260,7 @@ font-style:italic;
 <p><em>Listen to Peterson on online reporting standards.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 8 sec</span><br />
 <!-- img width="28" height="30" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Peterson_on_errors.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Peterson_on_errors.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Peterson_on_errors.mp3" type="audio/mpeg"></audio>
 </p>
 <p><em><strong>Mistakes.</strong></em> Logan had already confirmed that she was making spelling and grammatical errors. But it was potential errors of fact which worried her more. Mistakes, even seemingly trivial ones, were not taken lightly in the pages of the <em>Californian</em>. Editors carefully tracked factual, spelling, and style errors in the paper. It published corrections in a consistent and visible manner. Staff reporters&rsquo; personnel files included any violations&mdash;known as <a href="../../files/bakersfield/ftr.pdf" target="_blank" class="pdflink">For The Record</a>, or FTRs&mdash;of the <em>Californian</em>&rsquo;s stringent corrections policy. During annual employee reviews, notes Peterson, &ldquo;the boss for whoever made the error [pulls] those out and we look at them&hellip; Depending on the nature of the error, as little as one could have you not having a job anymore.&rdquo; The policy stated:</p>
 <blockquote>
