--- a/casestudies/19/casestudy/www/layout/case_id_19_id_219.html
+++ b/casestudies/19/casestudy/www/layout/case_id_19_id_219.html
@@ -252,7 +252,7 @@ font-style:italic;
 <p><em>Listen to Warren explain the difference between Information Exchanges and reader forums.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min</span><br />
 <!-- img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Warren%20info%20exchanges%20versus%20forums.mp3" class="audiofile" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Warren%20info%20exchanges%20versus%20forums.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Warren%20info%20exchanges%20versus%20forums.mp3" type="audio/mpeg"></audio>
 </p>
 <p>The <em>News-Press</em> was, in 2004, among the first American newspapers to adopt forum technology. Marymont recalls that the paper took a lot of criticism as a result. &ldquo;Many around the industry were very apprehensive about open forums where people could make unsubstantiated claims, call each other names... rant and rave about anything,&rdquo; she recalls. Other &ldquo;early adopters&rdquo; of forums exercised strict control over what could be posted there; the <em>News-Press</em>, by contrast, decided early on to take a more laissez-faire approach. But the paper&rsquo;s editors still grappled with what kinds of restrictions, if any, they should place on what users could post to their website. Publisher Carol Hudler consulted the paper&rsquo;s legal counsel about the <em>News-Press</em>&rsquo; responsibility for the accuracy of what appeared on its forums. The lawyer gave Hudler a useful comparison:</p>
 <blockquote>
