--- a/casestudies/2/casestudy/www/layout/case_id_2_id_74.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_74.html
@@ -288,7 +288,7 @@ font-style:italic;
 <p><em>Listen to Baxt on the importance of the emotional component.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 6 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Baxt_on_emotion.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Baxt_on_emotion.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Baxt_on_emotion.mp3" type="audio/mpeg"></audio>
 </p>
 <p>At the same time, the very emotion in the abortion support group scene was also an argument against using it. The filmmakers had to guard against being used. Center Director Beavers, recalls Aronson, &rdquo;was very passionate that she wanted me to see this.&rdquo; Did that mean the resulting footage came too close to pro-life propaganda? Elaborates Bomse: &ldquo;We were particularly watchful and careful about what emotional strings we were pulling because it&rsquo;s such an incredibly emotional and personal issue.&rdquo;<sup><a name="txtfn15" title="txtfn15"></a><a href="case_id_2_id_74.html#fn15">[15]</a></sup></p>
 <p><strong><em>Rare footage.</em></strong> Another pro-use argument was the unusual material in the scene&mdash;women from the South willing to talk about their abortions. As Baxt notes, &ldquo;one of the things we struggled with in the film was getting women to go on camera and speak in the first person.&rdquo; Aronson agrees. &ldquo;The most compelling reason for me [to include it],&rdquo; she says, &ldquo;was because it had energy.&rdquo;</p>
@@ -304,7 +304,7 @@ font-style:italic;
 <p><em>Listen to Bomse on choosing video.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 8 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Bomse_on_choosing_video.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Bomse_on_choosing_video.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Bomse_on_choosing_video.mp3" type="audio/mpeg"></audio>
 </p>
 <p><strong><em>Placement.</em></strong> There was also discussion about where, if they used the scene, it should go. &ldquo;One of the things that we asked is, does it belong in a different part of the film?&rdquo; says Baxt. &ldquo;It&rsquo;s not just [whether to use] that bite, but where it&rsquo;s placed in the construction of the film.&rdquo; They could conceivably open with the scene, or close with it. Baxt adds:</p>
 <blockquote>
