--- a/casestudies/20/casestudy/www/layout/case_id_20_id_230.html
+++ b/casestudies/20/casestudy/www/layout/case_id_20_id_230.html
@@ -244,7 +244,7 @@ font-style:italic;
 <p><i>Listen to Cull&rsquo;s conclusions about the value of crowdsourcing.</i><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 18 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20talk%20radio.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20talk%20radio.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20talk%20radio.mp3" type="audio/mpeg"></audio>
 </p>
 <p>Executive Editor Marymont wished that the <em>News-Press</em> had explained the concept of crowdsourcing, and the style of its investigation, more thoroughly in its print edition. She reflects:</p>
 <blockquote>
