--- a/casestudies/21/casestudy/www/layout/case_id_21_id_234.html
+++ b/casestudies/21/casestudy/www/layout/case_id_21_id_234.html
@@ -284,7 +284,7 @@ font-style:italic;
 <p><em>Listen to Smith discuss the demands of her job.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 18 sec</span><br />
 <audio controls>
-  <source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/abcnews/Smith%20on%20ruling%20a%20different%20way_edit.mp3" type="audio/mpeg">
+  <source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/abcnews/Smith%20on%20ruling%20a%20different%20way_edit.mp3" type="audio/mpeg">
       Your browser does not support the audio tag.
 </audio>
 <p>By the time the Durham rape case photos crossed her desk, Smith had several years experience heading up Editorial Quality, and had weighed in on a wide variety of questions: How should children be interviewed on television? How much blood should ABC News show in a war zone on the morning news? Four days after the September 11 terror attacks, Smith and Westin had made a particularly controversial decision, over the objection of several producers, that ABC stop re-playing video footage of the airplanes crashing into the World Trade Center, and of the collapse of the Twin Towers (although ABC continued to show still photos). It was a matter of &ldquo;taste, respect for those killed, and concern for children, who were unable to distinguish that this was something that was [not] happening again and again,&rdquo; ABC News&rsquo; Vice President Jeffrey Schneider later told a reporter.<sup><a title="txtfn8" name="txtfn8"></a><a href="case_id_21_id_234.html#fn8">[8]</a></sup> Producers and executives at ABC News were free to challenge Smith, and ABC News President Westin could overrule her decisions. In most cases, however, Smith had the final word.</p>
