--- a/casestudies/21/casestudy/www/layout/case_id_21_id_241.html
+++ b/casestudies/21/casestudy/www/layout/case_id_21_id_241.html
@@ -280,7 +280,7 @@ font-style:italic;
 <p><i>Listen to Avram discuss why he decided to call Smith.</i><br />
 <span class="footnoteslength"><b>Length:</b> 32 sec</span><br />
 <audio controls>
-  <source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/abcnews/Avram%20on%20calling%20Smith.mp3" type="audio/mpeg">
+  <source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/abcnews/Avram%20on%20calling%20Smith.mp3" type="audio/mpeg">
       Your browser does not support the audio tag.
 </audio>
 <p>Whenever an ABC news producer faced a concern of this kind, s/he was supposed to call Smith, head of the Editorial Quality Office, for guidance. At 7 a.m., Avram reached Smith on her cell phone, explained the situation, and sent her the photos.</p>
