--- a/casestudies/22/casestudy/www/layout/case_id_22_id_250.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_250.html
@@ -329,7 +329,7 @@ font-style:italic;
 <p><i>Listen to the 6:07am exchange between Gilligan and Humphrys:</i><br />
 <span class="footnoteslength"><b>Length:</b> 2 min 51 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/gilligan_humphrys_607am_exchange.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/gilligan_humphrys_607am_exchange.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/gilligan_humphrys_607am_exchange.mp3" type="audio/mpeg"></audio>
 </p>
 <p>Marsh was one of many BBC officials who listened to the 6:07 exchange. But, he says, &ldquo;I didn&rsquo;t pick up on the &lsquo;probably they knew it was wrong&rsquo; line. I wasn&rsquo;t sitting there checking it against the script.&rdquo; He did, however, anticipate a protest&mdash;because the government protested so much of what the <i>Today</i> program broadcast, from the slant of economic news to the use of statistics on the national health service. &ldquo;In any one day,&rdquo; he says, &ldquo;you probably get five official-looking letters. In any week, you&rsquo;ll get two from solicitors [lawyers], and 100 phone calls, all from people telling you you&rsquo;re the stupidest person who&rsquo;s ever walked the face of the earth... Letters from Downing Street were not rare.&rdquo;</p>
 <p><i><b>Government protest.</b></i> Prime Minister Tony Blair and his communications director, Alastair Campbell, were at the time visiting Basra, Iraq. So they had no immediate comment. But at 7:15 a.m., a spokesman from No. 10 Downing Street, the prime minister&rsquo;s office, called to protest the story. A <a class="pdflink" target="_blank" href="../../files/bbc/statement_715_downingst.pdf">statement</a> said:</p>
@@ -343,7 +343,7 @@ font-style:italic;
 <p><i>Listen to the 7:30 a.m. follow-up report:</i><br />
 <span class="footnoteslength"><b>Length:</b> 4 min 19 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/report_732am_humphrys_gilligan.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/report_732am_humphrys_gilligan.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/report_732am_humphrys_gilligan.mp3" type="audio/mpeg"></audio>
 </p>
 <p>At 8:28 a.m., Humphrys interviewed Armed Forces Minister Ingram by pre-arrangement about the cluster bombs story. Humphrys also asked for reaction to the September dossier story. In response, Ingram admitted that the 45-minute intelligence claim was based on a single source. From the BBC&rsquo;s viewpoint, that substantiated Gilligan&rsquo;s report. But Ingram also denied the allegation that there had been any pressure from Downing Street to alter the dossier&rsquo;s language: &ldquo;That is not the case. There was no pressure from No. 10.&rdquo;</p>
 <p><i><a class="pdflink" target="_blank" href="../../files/bbc/transcript_Today_20030529.pdf">Read a partial transcript</a> of the May 29 Today show</i>.</p>
