--- a/casestudies/22/casestudy/www/layout/case_id_22_id_253.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_253.html
@@ -335,7 +335,7 @@ font-style:italic;
 <p><i>Listen to Boaden on Birt&rsquo;s crisis management system:</i><br />
 <span class="footnoteslength"><b>Length:</b> 16 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/boaden_on_chief_political_advisor.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/boaden_on_chief_political_advisor.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/boaden_on_chief_political_advisor.mp3" type="audio/mpeg"></audio>
 </p>
 <p>Then-International Division Director Byford agrees that the political advisor could have played a role. After all, the dispute was between Campbell and the BBC News Division, not the director-general. He says:</p>
 <blockquote>
@@ -344,7 +344,7 @@ font-style:italic;
 <p><i>Listen to Byford on the BBC&rsquo;s complaints process:</i><br />
 <span class="footnoteslength"><b>Length:</b> 30 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/byford_on_chief_political_advisers.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/byford_on_chief_political_advisers.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/byford_on_chief_political_advisers.mp3" type="audio/mpeg"></audio>
 </p>
 <p>But it was Dyke&rsquo;s style to cut through red tape to get things done. Dyke, notes Mitchell, &ldquo;has no appetite for bureaucracy and process... So it was out with the normal processes and the normal structures very quickly.&rdquo; Not everyone at the BBC found that effective. &ldquo;That approach is high risk. It leads to incoherence. It leads to emotionalism,&rdquo; notes Mitchell. Harking back to the era of Director-General Birt, Mitchell adds:</p>
 <blockquote>
@@ -353,7 +353,7 @@ font-style:italic;
 <p><i>Listen to Mitchell on Dyke&rsquo;s style:</i><br />
 <span class="footnoteslength"><b>Length:</b> 30 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/mitchell_on_handson.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/mitchell_on_handson.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/mitchell_on_handson.mp3" type="audio/mpeg"></audio>
 </p>
 <p>Controller Whittle himself probably felt that his job was to defuse Dyke. There was a history of directors-general coming after the <i>Today</i> show because politicians had complained about its coverage. &ldquo;I think Stephen Whittle felt, oh, this is another one of those, we just need to calm Greg down,&rdquo; says Sambrook. In response to Dyke, Whittle asked Radio News Director Mitchell for a detailed explanation of how a story got onto the air. He also asked whether BBC procedures had been followed in the Gilligan story.</p>
 <p>At 3:30 p.m. on Thursday, June 5, Mitchell reported back with <a class="pdflink" target="_blank" href="../../files/bbc/email_20030605_mitchell_to_whittle.pdf">a lengthy email</a> detailing the process in general of bringing a story to the <i>Today</i> program; and the steps in particular followed for the Gilligan report. He recounted that before the broadcast, <i>Today</i> Editor Marsh had discussed with Gilligan the reliability of the source, as well as the context of the source&rsquo;s allegation. Mitchell himself also knew about the story in advance of broadcast, but only in general terms. That was common. The director of news or his deputy was personally involved only in preparing a difficult policy or legal story; this was not deemed necessary for the &ldquo;sexed-up dossier&rdquo; story.</p>
@@ -363,7 +363,7 @@ font-style:italic;
 <p><i>Listen to Marsh on the BBC&rsquo;s culture:</i><br />
 <span class="footnoteslength"><b>Length:</b> 33 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/marsh_on%20_gentlemens_rules.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/marsh_on%20_gentlemens_rules.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/marsh_on%20_gentlemens_rules.mp3" type="audio/mpeg"></audio>
 </p>
 <p>A more thorough investigation seemed uncalled for, although Sambrook discussed that possibility with Dyke. Sambrook had listened to a tape of the 6:07 two-way, and judged it to be &ldquo;obviously not very good. It&rsquo;s a very hesitant, live interview.&rdquo; But Gilligan was standing by his story. &ldquo;It&rsquo;s always a bit uncomfortable when you&rsquo;ve got a single, anonymous source,&rdquo; comments Sambrook. &ldquo;But the reporter was very much sticking to it.&rdquo;</p>
 <p>The BBC also took encouragement from reports in other news outlets about disquiet in the intelligence community. Moreover, the government had not said the story was wrong. So far, it had objected only to BBC failure to follow its own procedures, specifically to notify the government before broadcast to allow it an immediate reply. &ldquo;This felt as if they were trying to find something to complain about because they were uncomfortable,&rdquo; Sambrook adds.</p>
