--- a/casestudies/22/casestudy/www/layout/case_id_22_id_260.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_260.html
@@ -334,7 +334,7 @@ font-style:italic;
 <p><i>Listen to Sambrook on the Today program:</i><br />
 <span class="footnoteslength"><strong>Length:</strong> 39 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/sambrook_on_governors.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/sambrook_on_governors.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/sambrook_on_governors.mp3" type="audio/mpeg"></audio>
 </p>
 <p>It was also possible that the board would recuse itself. It had a strong incentive to do so, because the board not only exercised oversight over the BBC; it was also a court of appeals for complaints to the Program Complaints Unit. Should Campbell choose&mdash;as he had every right to do even at this late date--to lodge an official complaint, board involvement in the altercation could invalidate it as a neutral panel of judges.</p>
 <p><i><b>Process.</b></i> Sambrook considered some of the BBC&rsquo;s other options. One was to instruct Campbell more forcefully than Sambrook had been able to so far to follow the established process for complaints, and assure him it would rise immediately to the board of governors&rsquo; level. The case was straightforward: Campbell had made complaints to the BBC. Sambrook&rsquo;s replies were unsatisfactory to Campbell. &ldquo;He has the right for that complaint to be fast-tracked to our own governors&rsquo; complaints committee... He can go for independent assessment,&rdquo; says Byford.</p>
