--- a/casestudies/23/casestudy/www/layout/case_id_23_id_269.html
+++ b/casestudies/23/casestudy/www/layout/case_id_23_id_269.html
@@ -322,7 +322,7 @@ font-style:italic;
 <p><i>Listen to Demma on sending reporters into dangerous situations.</i><br />
 <span class="footnoteslength"><b>Length:</b> 1 min 28 sec</span><br />
 <!-- img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Demma_dangerous_situations.mp3" class="audiofile" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Demma_dangerous_situations.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Demma_dangerous_situations.mp3" type="audio/mpeg"></audio>
 </p>
 <p>On the other hand, Demma felt that it was only through such reporting that Kestin and O&rsquo;Matz could prove that Miami-Dade residents had committed fraud. All three knew that the reporting duo could gather the most information in the shortest amount of time by splitting up, rather than the safer option of working together. And since Kestin and O&rsquo;Matz had both surveyed poor, unsafe neighborhoods as social services reporters, they were experienced, if slightly uncomfortable, reporting in those neighborhoods alone. Kestin explains her strategy:</p>
 <blockquote>
