--- a/casestudies/24/casestudy/www/layout/case_id_24_id_282.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_282.html
@@ -353,7 +353,7 @@ font-style:italic;
 </blockquote>
 <p><span class="audioprompt"><i>Listen to Simon talk about journalists losing their status as neutral observers.</i></span><span class="footnoteslength"><b>Length:</b> 1 min 20 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/simon_status.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/simon_status.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/simon_status.mp3" type="audio/mpeg"></audio>
 </p>
 <p>Pearl&rsquo;s kidnapping on January 25, 2002, while on assignment in Karachi, Pakistan, changed all that. A previously unknown group calling itself the &ldquo;National Movement for Restoration of Pakistani Sovereignty&rdquo; took responsibility for his kidnapping. It claimed that Pearl, 38, was a CIA and Israeli intelligence officer &ldquo;posing as a journalist of the <i>Wall Street Journal</i>.&rdquo;<sup><a name="txtfn5" title="txtfn5"></a><a href="case_id_24_id_282.html#fn5">[5]</a></sup> Pearl was captured when he went, alone, to a rendezvous with a source for a story.  <span class="inline inline-left"><br />
 <img width="150" height="220" src="../../files/csm/images/daniel_pearl.jpg" alt="" /><br />
