--- a/casestudies/19/casestudy/www/layout/case_id_19_id_218.html
+++ b/casestudies/19/casestudy/www/layout/case_id_19_id_218.html
@@ -252,7 +252,7 @@ font-style:italic;
 <p><em>Listen to McCurry-Ross discuss transparency:</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 22 sec</span><br />
 <!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Cindy%20McCurry-Ross%20transparency.mp3" class="audiofile" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Cindy%20McCurry-Ross%20transparency.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Cindy%20McCurry-Ross%20transparency.mp3" type="audio/mpeg"></audio>
 </p>
 <p>The paper, she thought, would in essence be announcing to its audience: &ldquo;We&rsquo;re going to share with you what we find out when we find it out, not down the road.&rdquo; In turn, the paper would ask its readers to do the same. Reporting would become a collaborative effort between the <em>News-Press</em> and its community.</p>
 <div class="footnotesblock">
