--- a/casestudies/2/casestudy/www/layout/case_id_2_id_66.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_66.html
@@ -288,7 +288,7 @@ font-style:italic;
 <p><em>Listen to Fanning on brainstorming ideas.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 46 sec</span><br />
 <!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Fanning_on_brainstorming.mp3" class="audiofile" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Fanning_on_brainstorming.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Fanning_on_brainstorming.mp3" type="audio/mpeg"></audio>
 </p>
 <p>But where newspapers typically were looking for a story that would resonate the next day, and magazines the following week or month, <em>Frontline</em> had to work six to nine months in advance. &ldquo;I think a little bit of it&rsquo;s crystal ball stuff, a little bit of it is us trying to second guess where the <em>zeitgeist</em> is going to be,&rdquo; notes Fanning. One technique <em>Frontline</em> employed to identify unique angles on stories was to give producers the time and resources to research a topic before any film was shot. &ldquo;The greatest gift of <em>Frontline</em>, the thing that distinguishes it from everything else in television, is the time that we give people to do that, the time to research and the resources to research,&rdquo; says Fanning.</p>
 <p><strong><em>Producers.</em></strong> <em>Frontline</em> chose its producers carefully. It maintained contractual relationships with some 20 independent producers across the country. <em>Frontline</em> might work with seven or eight of them in any given year. The producers ran independent businesses, but once they signed a contract with <em>Frontline</em>, editorial control passed to the program. In producers, Fanning looked for &ldquo;this very peculiar combination of real journalistic instinct and reporting skills, and then I&rsquo;m looking for filmmaking. I&rsquo;m looking to marry those two.&rdquo;</p>
@@ -307,7 +307,7 @@ font-style:italic;
 <p><em>Listen to Fanning on qualities in producers.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 37 sec</span><br />
 <!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Fanning_on_producers.mp3" class="audiofile" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Fanning_on_producers.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Fanning_on_producers.mp3" type="audio/mpeg"></audio>
 </p>
 <p>In the fall of 2004, Fanning thought it might be time for <em>Frontline</em> to take a look at the state of the national debate over abortion. It had not addressed the subject for over 20 years, since a landmark 1983 film called &ldquo;<a class="extlink" target="_blank" href="http://www.pbs.org/wgbh/pages/frontline/twenty/watch/abortion.html">Abortion Clinic.</a>&rdquo;  That film took viewers for the first time inside a clinic to talk to patients and doctors. Fanning thought he had just the producer to tackle such a topic: Raney Aronson.</p>
 <div class="footnotesblock">
