--- a/casestudies/20/casestudy/www/layout/case_id_20_id_225.html
+++ b/casestudies/20/casestudy/www/layout/case_id_20_id_225.html
@@ -246,7 +246,7 @@ font-style:italic;
 <p><i>Listen to McCurry-Ross describe posting the audit.</i><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 10 sec</span><br />
 <!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/McCurry-Ross%20posting%20audit.mp3" class="audiofile" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/McCurry-Ross%20posting%20audit.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/McCurry-Ross%20posting%20audit.mp3" type="audio/mpeg"></audio>
 </p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
