--- a/casestudies/23/casestudy/www/layout/case_id_23_id_263.html
+++ b/casestudies/23/casestudy/www/layout/case_id_23_id_263.html
@@ -334,7 +334,7 @@ font-style:italic;
 <p><i>Listen to Rosenhause describe her vision of an investigative team.</i><br />
 <span class="footnoteslength"><b>Length:</b> 1 min 21 sec</span><br />
 <!-- img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Rosenhause_on_the_team.mp3" class="audiofile" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Rosenhause_on_the_team.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Rosenhause_on_the_team.mp3" type="audio/mpeg"></audio>
 </p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
